--- a/src/css/MainContent.css
+++ b/src/css/MainContent.css
@@ -1,5 +1,64 @@
-.mainContentClass {
-    display: block;
-    height: 100%;
-    position: relative;
+#mainContent {
+    min-height: 1000px;
 }
+
+.mainContentClass {
+    display: flex;
+    flex-direction: row;
+}
+
+.mainContentClass * {
+    width: 50%;
+    padding: 15px;
+    text-align: center;
+}
+
+.description {
+    display: block;
+    font-size: 24px;
+    text-align: justify;
+    padding-right: 60px;
+}
+
+.descriptionText {
+    text-align: justify;
+    font-size: 24px;
+    width: 100%;
+    padding: 0;
+    text-indent: 30px;
+}
+
+.descriptionText * {
+    width: 100%;
+}
+
+.list {
+    width: 100%;
+}
+
+.listElement {
+    text-align: justify;
+    width: 100%;
+    padding: 0;
+}
+
+.additionalPictures {
+    padding-top: 15px;
+    display: flex;
+    flex-direction: column;
+    width: auto;
+}
+
+.additionalPictures * {
+    padding-bottom: 15px;
+}
+
+.additionalPicture {
+    padding: 0 40px 15px 40px;
+}
+
+.additional {
+    display: block;
+    text-align: center;
+}
+
